Fixed overflow

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -9,7 +9,7 @@ body {
   font-family: Poppins, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   background: #000;
-  overflow-x: hidden;
+  // overflow-x: hidden;
   scroll-behavior: smooth;
   --color-blue: #0077b6;
   --color-blue-dark: #023e8a;
